--- a/results/tempo_ensemble/config.json
+++ b/results/tempo_ensemble/config.json
@@ -1,8 +1,7 @@
 {
-    "model": "TEMPO_ensemble",
+    "model": "TEMPO_ENSEMBLE",
     "model_type": "fine-tuned",
     "model_dtype": "float32",
     "model_link": "https://huggingface.co/Melady/TEMPO",
     "org": "Melady Lab @ USC",
     "testdata_leakage": "Yes"
-}
