Update TiRex results (#62)
Hi,

we would like to update the results for the TiRex model. We obtained
this set of results by introducing the following
changes compared to our previous submission:
- removed the overlap between our training corpus and the GiftEval
evaluation set that originated from the Chronos pretraining corpus.
- added a new TiRex feature, long period normalisation during inference,
which requires changes to the notebook.

Note: the dataset-level results can fluctuate a little bit depending on
the hardware. We obtained the results by running
on a A100. 

During our retraining efforts, we identified an additional subtle
overlap between the Gift-Eval evaluation dataset and the Chronos
pretraining corpus.
Both include a dataset named Solar; the Gift-Eval evaluation dataset
sources it from [Lai et al.
(2017)](https://api.semanticscholar.org/CorpusID:4922476) who sampled
solar power from the US state Alabama in 2006. The [Chronos pretraining
corpus](https://arxiv.org/pdf/2403.07815) includes data from all US
states sampled in the same year. We have excluded these data from our
pretraining corpus to ensure zero-shot predictions on all evaluated
datasets.

With these changes, TiRex has no overlap with any of the GiftEval
datasets and is full zero-shot.

Thank you for your consideration!

--- a/results/TiRex/config.json
+++ b/results/TiRex/config.json
@@ -1,8 +1,8 @@
 {
     "model": "TiRex",
-    "model_type": "pretrained",
+    "model_type": "zero-shot",
     "model_dtype": "float32",
-    "model_link": "https://huggingface.co/NX-AI/TiRex",
+    "model_link": "https://huggingface.co/NX-AI/TiRex-1.1-gifteval",
     "org": "NXAI",
-    "testdata_leakage": "Yes"
+    "testdata_leakage": "No"
 }
