--- a/results/Kairos-1.0/config.json
+++ b/results/Kairos-1.0/config.json
@@ -4,5 +4,6 @@
     "model_dtype": "float32",
     "org": "ContinualIST",
     "model_link": "https://www.continualist.ai",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
 }
