--- a/results/DeOSAlphaTimeGPTPredictor-2025/config.json
+++ b/results/DeOSAlphaTimeGPTPredictor-2025/config.json
@@ -4,5 +4,7 @@
     "model_dtype": "float32",
     "model_link": "https://huggingface.co/vencortexio/DeOSAlphaTimeGPTPredictor-2025",
     "org": "vencortex®",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
+
 }
