--- a/results/Kairos_50m/config.json
+++ b/results/Kairos_50m/config.json
@@ -3,7 +3,8 @@
     "model_type": "zero-shot",
     "model_dtype": "float32",
     "model_link": "https://huggingface.co/mldi-lab/Kairos_50m",
-    "code_link": "https://github.com/foundation-model-research/Kairos",
+    "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/kairos.ipynb",
     "org": "ShanghaiTech University",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "Yes"
 }
