--- a/results/Moirai_large/config.json
+++ b/results/Moirai_large/config.json
@@ -5,5 +5,6 @@
     "model_link": "https://huggingface.co/Salesforce/moirai-1.1-R-large",
     "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/moirai.ipynb",
     "org": "Salesforce AI Research",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "Yes"
 }
