--- a/results/Nexus-1.0/config.json
+++ b/results/Nexus-1.0/config.json
@@ -3,5 +3,6 @@
     "model_type": "agentic",
     "model_dtype": "float32",
     "org": "Google Cloud AI Research",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
 }
