--- a/results/PatchTST/config.json
+++ b/results/PatchTST/config.json
@@ -3,5 +3,6 @@
     "model_type": "deep-learning",
     "model_dtype": "float32",
     "org": "Princeton University",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
 }
