--- a/results/TSOrchestra/config.json
+++ b/results/TSOrchestra/config.json
@@ -4,5 +4,6 @@
     "model_dtype": "float32",
     "model_link": "https://github.com/DC-research/TSorchestra",
     "org": "Melady Lab @ USC",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
 }
