--- a/results/TTM-R2-Finetuned/config.json
+++ b/results/TTM-R2-Finetuned/config.json
@@ -5,5 +5,6 @@
     "model_link": "https://huggingface.co/ibm-granite/granite-timeseries-ttm-r2",
     "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/ttm.ipynb",
     "org": "IBM Research",
-    "testdata_leakage": "Yes"
+    "testdata_leakage": "Yes",
+    "replication_code_available": "Yes"
 }
