--- a/results/TimesFM-2.5/config.json
+++ b/results/TimesFM-2.5/config.json
@@ -5,5 +5,6 @@
     "model_link": "https://huggingface.co/google/timesfm-2.5-200m-pytorch",
     "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/timesfm2p5.ipynb",
     "org": "Google Research",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "Yes"
 }
