--- a/results/Toto_Open_Base_1.0/config.json
+++ b/results/Toto_Open_Base_1.0/config.json
@@ -3,6 +3,8 @@
     "model_type": "zero-shot",
     "model_dtype": "float32",
     "model_link": "https://huggingface.co/Datadog/Toto-Open-Base-1.0",
+    "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/toto.ipynb",
     "org": "Datadog",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "Yes"
 }
