--- a/results/chronos_large/config.json
+++ b/results/chronos_large/config.json
@@ -5,5 +5,6 @@
     "model_link": "https://huggingface.co/amazon/chronos-t5-large",
     "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/chronos.ipynb",
     "org": "AWS AI Labs",
-    "testdata_leakage": "Yes"
+    "testdata_leakage": "Yes",
+    "replication_code_available": "Yes"
 }
