--- a/results/seasonal_naive/config.json
+++ b/results/seasonal_naive/config.json
@@ -2,5 +2,8 @@
     "model": "Seasonal_Naive",
     "model_type": "statistical",
     "model_dtype": "float32",
-    "testdata_leakage": "No"
+    "model_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/naive.ipynb",
+    "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/naive.ipynb",
+    "testdata_leakage": "No",
+    "replication_code_available": "Yes"
 }
