--- a/results/timesfm_2_0_500m/config.json
+++ b/results/timesfm_2_0_500m/config.json
@@ -5,5 +5,6 @@
     "model_link": "https://huggingface.co/google/timesfm-2.0-500m-jax",
     "code_link": "https://github.com/SalesforceAIResearch/gift-eval/blob/main/notebooks/timesfm.ipynb",
     "org": "Google Research",
-    "testdata_leakage": "Yes"
+    "testdata_leakage": "Yes",
+    "replication_code_available": "Yes"
 }
