--- a/results/visionts/config.json
+++ b/results/visionts/config.json
@@ -4,5 +4,6 @@
     "model_dtype": "float32",
     "model_link": "https://github.com/Keytoyze/VisionTS",
     "org": "Zhejiang University",
-    "testdata_leakage": "No"
+    "testdata_leakage": "No",
+    "replication_code_available": "No"
 }
