Rename Nexus-1.0 to Synapse and update config with paper link (#84)
Hi,

We are renaming our project from Nexus-1.0 to Synapse for consistency
with our paper, and including the manuscript link.

Thanks.

---------

Co-authored-by: Taha Aksu <tahaaksu01@gmail.com>

--- a/results/Synapse/config.json
+++ b/results/Synapse/config.json
@@ -1,7 +1,8 @@
 {
-    "model": "Nexus-1.0",
+    "model": "Synapse",
     "model_type": "agentic",
     "model_dtype": "float32",
+    "model_link": "https://arxiv.org/abs/2511.05460",
     "org": "Google Cloud AI Research",
     "testdata_leakage": "No",
     "replication_code_available": "No"
